# round2

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  utils.py
data/: chemical_data_processed.csv
notebook/: main.ipynb
