[project]
name = "2nd-round"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.8",
    "mysqlclient>=2.2.7",
    "numba>=0.57",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "rdkit>=2025.9.3",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "tensorflow>=2.20.0",
    "xgboost>=3.1.3",
]
