[project]
name = "2nd-round"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=46.0.3",
    "matplotlib>=3.10.8",
    "numba>=0.57",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.2",
    "pymysql>=1.1.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "streamlit>=1.53.0",
    "tensorflow>=2.20.0",
    "xgboost>=3.1.3",
]
